--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.9",
+    "styled-normalize": "^8.0.7",
     "typescript": "5.0.4",
     "usehooks-ts": "^2.9.1"
   },
