--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.65.4",
+    "@react-three/fiber": "^8.12.2",
     "@types/node": "18.15.11",
     "@types/react": "18.0.34",
     "@types/react-dom": "18.0.11",
@@ -16,11 +18,14 @@
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "framer-motion": "^10.11.6",
+    "maath": "^0.5.3",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-tilt": "^1.0.2",
     "styled-components": "^5.3.9",
     "styled-normalize": "^8.0.7",
+    "three": "^0.151.3",
     "typescript": "5.0.4",
     "usehooks-ts": "^2.9.1"
   },
