--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "styled-normalize": "^8.0.7",
     "three": "^0.151.3",
     "typescript": "5.0.4",
+    "typewriter-effect": "^2.19.0",
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
