--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^10.11.6",
     "maath": "^0.5.3",
     "next": "13.3.0",
+    "next-i18next": "^13.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-tilt": "^1.0.2",
