--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "maath": "^0.5.3",
     "next": "13.3.0",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-tilt": "^1.0.2",
     "styled-components": "^5.3.9",
