--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "framer-motion": "^10.11.6",
+    "i18next": "^22.4.15",
     "maath": "^0.5.3",
     "next": "13.3.0",
+    "next-i18next": "^13.2.2",
     "react": "18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.2.2",
     "react-tilt": "^1.0.2",
     "styled-components": "^5.3.9",
     "styled-normalize": "^8.0.7",
