--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   "dependencies": {
     "@react-three/drei": "^9.65.4",
     "@react-three/fiber": "^8.12.2",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.34",
+    "@testing-library/react": "^14.0.0",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.34",
     "@types/react-dom": "18.0.11",
     "@types/styled-components": "^5.1.26",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "framer-motion": "^10.11.6",
     "i18next": "^22.4.15",
+    "jsdom": "^22.0.0",
     "maath": "^0.5.3",
     "next": "13.3.0",
     "next-i18next": "^13.2.2",
@@ -32,7 +34,8 @@
     "three": "^0.151.3",
     "typescript": "5.0.4",
     "typewriter-effect": "^2.19.0",
-    "usehooks-ts": "^2.9.1"
+    "usehooks-ts": "^2.9.1",
+    "vitest": "^0.31.0"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^2.1.1"
