--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 4000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,11 +11,13 @@
   "dependencies": {
     "@react-three/drei": "^9.65.4",
     "@react-three/fiber": "^8.12.2",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/react": "^14.0.0",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.34",
     "@types/react-dom": "18.0.11",
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.4.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "framer-motion": "^10.11.6",
@@ -28,6 +30,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-i18next": "^12.2.2",
+    "react-redux": "^8.0.7",
     "react-tilt": "^1.0.2",
     "styled-components": "^5.3.9",
     "styled-normalize": "^8.0.7",
