Change liara.yaml file to only watch master branch

--- a/.github/workflows/liara.yaml
+++ b/.github/workflows/liara.yaml
@@ -1,13 +1,7 @@
 name: CD-Liara
 on:
   push:
-    branches:
-      [
-        master,
-        no-translation,
-        feat/internationalization,
-        feat/font-optimization,
-      ]
+    branches: [master]
 jobs:
   deploy:
     runs-on: ubuntu-latest
