--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsdom": "^22.0.0",
     "maath": "^0.5.3",
     "next": "13.2.4",
+    "next-auth": "^4.24.4",
     "next-i18next": "^13.2.2",
     "react": "18.2.0",
     "react-device-detect": "^2.2.3",
