Hidden 'auth' button inside '/components/header/header.tsx'

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "cSpell.words": ["googleusercontent"]
+  "cSpell.words": [
+    "googleusercontent"
+  ],
+  "i18n-ally.localesPaths": [
+    "public/locales"
+  ]
 }
